--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
 }
 header a {
   font-family: OCR A Extended;
@@ -63,7 +65,7 @@ header .circle {
 }
 
 main {
-  background: url(../img/fondo__mobile.png);
+  background: url(../img/fondo__mobile.png) #6d811e;
   background-repeat: no-repeat;
   background-position: top center;
   background-size: contain;
@@ -75,7 +77,8 @@ main {
   align-items: center;
 }
 main #hero__section {
-  margin-top: 60px;
+  margin-top: 80px;
+  margin-left: 32px;
 }
 main h2 {
   font-weight: 500;
@@ -162,6 +165,87 @@ main .button {
   color: white;
   text-align: center;
   z-index: 1;
+}
+
+@media screen and (min-width: 400px) {
+  main {
+    background: url(../img/fondo__desktop.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+  }
+  main #hero__section {
+    margin-top: 60px;
+    margin-left: 10%;
+  }
+}
+@media screen and (min-width: 600px) {
+  main {
+    background: url(../img/fondo__desktop.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+  }
+  main #hero__section {
+    margin-top: 10%;
+    margin-left: 10%;
+  }
+  main h2 {
+    font-size: 3rem;
+  }
+  main p {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    width: 500px;
+  }
+  main .button {
+    background-color: #0F1201;
+    color: #EAECE3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 204px;
+    height: 70px;
+    border-radius: 2px;
+    border: none;
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-top: 40px;
+  }
+}
+@media screen and (min-width: 1000px) {
+  main {
+    background: url(../img/fondo__desktop.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+  }
+  main #hero__section {
+    margin-top: 2%;
+    margin-left: 10%;
+  }
+  main h2 {
+    font-size: 4rem;
+  }
+  main p {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    width: 500px;
+  }
+  main .button {
+    background-color: #0F1201;
+    color: #EAECE3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 240px;
+    height: 60px;
+    border-radius: 2px;
+    border: none;
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-top: 40px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
