--- a/sass/productos.scss
+++ b/sass/productos.scss
@@ -1,6 +1,12 @@
 
 @import 'style';
-
+.title__productos{
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    color: $primary--color;
+    margin-left: 14px;
+}
 #container__cards{
     display: grid;
     grid-template-columns: 50% 50%;
@@ -274,3 +280,85 @@
     position: absolute;
     bottom: 10px;
 }
+
+@media screen and (min-width:400px){
+    #container__cards{
+        display: grid;
+        grid-template-columns: 200px 200px;
+        gap: 12px;
+        margin: 20px 0px auto 14px;
+        justify-content: center; 
+        width: fit-content;
+    }
+    .card{
+        height: 290px;
+        
+        max-width: 300px;
+        background: #FEFFFB;
+        border-radius: 2px;
+        display: flex;
+        flex-flow: column;
+        padding: 0px  0px;
+        justify-content: center;
+        position: relative;
+        
+        &:hover{
+            filter: drop-shadow(0px 2px 4px rgba(20, 16, 16, 0.25));
+        }
+        img{
+            position: absolute;
+            top: 0;
+            margin-top: 0px;
+            max-width: 100%;
+            width: 100%;
+            height: 48%;
+            object-fit: cover;
+            border-radius: 2px 2px 0px 0px;
+        }
+            .infocard{
+                padding: 0px 12px;
+                span{
+                    font-family: 'Noto Sans JP', sans-serif;
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 1.3rem;
+                    line-height: 29px;
+                    color: $price--color;
+                    position: absolute;
+                    top: 200px;
+                }
+                h3{
+                    font-family: 'Noto Sans JP', sans-serif;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 20px;
+                    color: $name--product--color;
+                    margin-top: 2px;
+                    position: absolute; 
+                    top: 155px;
+                }
+            }
+            button{
+                outline: none;
+                color: $primary--color;
+                border: solid 1.34px $primary--color;
+                border-radius: 2px;
+                background-color:#FEFFFB;
+                font-family: Noto Sans JP;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 14px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                min-width: 145px;
+                min-height: 36px;
+                position: absolute;
+                bottom: 14px;
+            }
+        
+    }
+}
+
