--- a/css/style.css
+++ b/css/style.css
@@ -46,13 +46,14 @@ header .cart {
   position: relative;
   cursor: pointer;
 }
-header .cart .cantidadcart {
+header .cantidadcart {
   font-family: "Noto Sans JP", sans-serif;
   font-weight: 900;
-  font-size: 10px;
+  font-size: 11px;
   position: absolute;
-  top: 8px;
-  left: 12px;
+  top: 7px;
+  left: 37%;
+  width: 11px;
 }
 header .circle {
   width: 8px;
