--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,17 +49,16 @@ header{
         background-position: center center;
         position: relative;
         cursor: pointer;
-            .cantidadcart{
-                font-family: 'Noto Sans JP', sans-serif;
-                font-weight: 900;
-                font-size: 10px;
-                position: absolute;
-                top: 8px;
-                left: 12px;
-            }
     }
-
-    
+    .cantidadcart{
+        font-family: 'Noto Sans JP', sans-serif;
+        font-weight: 900;
+        font-size: 11px;
+        position: absolute;
+        top: 7px;
+        left:37%;
+        width: 11px;
+    }
     .circle{
         width: 8px;
         height: 8px;
