--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ main {
   background: url(../img/fondo__mobile.png) #6d811e;
   background-repeat: no-repeat;
   background-position: top center;
-  background-size: contain;
+  background-size: cover;
   height: 100vh;
   font-family: "Noto Sans JP", sans-serif;
   width: 100%;
