--- a/sass/productos.scss
+++ b/sass/productos.scss
@@ -9,7 +9,7 @@
 }
 #container__cards{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr ;
     gap: 12px;
     margin: 20px 20px;
     justify-content: center; 
@@ -120,8 +120,7 @@
 .carritomain{
     border-top: 4px $primary--color solid;
     width: 80%;
-    height:75vh;
-    max-height: fit-content;
+    height: fit-content;
     max-width: 300px;
     position: absolute;
     margin: 0 auto;
@@ -135,8 +134,9 @@
     opacity: 0;
     transition: .3s; 
     z-index: 10000000000;
-    
+    border: solid 1px blue;
 }
+
 .carritoabierto{
     pointer-events: visible;
     opacity: 1;
@@ -187,6 +187,7 @@
     }
 }
 /* card productos añadidos */
+
 .cardcarrito{
     display: flex;
     flex-flow: row;
@@ -194,6 +195,7 @@
     height: fit-content;
     margin-bottom: 16px;
 }
+
 .img_card__carrito{
     width: 86px;
     height: 90px;
@@ -272,13 +274,12 @@
 .totalcarritocontainer{
     position: absolute;
     width:87%;
-    bottom: 100px;
+    bottom: 70px;
     font-family: Noto Sans JP;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
-    
     span{
         font-style: normal;
         font-weight: 500;
@@ -304,15 +305,12 @@
 }
 /* button comprar carrito */
 .button__comprar{
-    width:90%;
+    width:100%;
     max-width: 300px;
     height:50px;
     max-height: 100px;
-    position: absolute;
-    bottom: 20px;
-    left: 0;
-    right: 0;
-    margin: auto;
+    
+    margin: 70px  auto -10px auto;
     border: none;
     border-radius: 2px;
     background-color: $primary--color;
@@ -327,6 +325,7 @@
     text-align: center;
     color: #FFFFFF;
     cursor: pointer;
+        
 }
 /* animacion boton add to cart cuando se clickea */
 @keyframes animacionbutton {
@@ -452,7 +451,7 @@
 @media screen and (min-width:600px){
     #container__cards{
         display: grid;
-        grid-template-columns: 200px 200px;
+        grid-template-columns: 200px 200px 200px;
         gap: 12px;
         margin: 20px 0px auto 14px;
         justify-content: center; 
