--- a/sass/productos.scss
+++ b/sass/productos.scss
@@ -457,7 +457,7 @@
     }
     .carritomain{
         top: 60px;
-        /* left: auto;
-        right: 16px; */
+        left: auto;
+        right: 16px;
     }
 }
