--- a/sass/style.scss
+++ b/sass/style.scss
@@ -57,6 +57,7 @@ header{
         top: 7px;
         left:37%;
         width: 11px;
+        cursor: pointer;
     }
     .circle{
         width: 8px;
