--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,6 +30,7 @@ header{
     justify-content: space-between;
     position: sticky;
     top: 0;
+    z-index: 1000;
     a{
         font-family: OCR A Extended;
         font-style: normal;
