--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header {
   justify-content: space-between;
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 header a {
   font-family: OCR A Extended;
